修改项目名称

--- a/Craftsman.xCoronavirus.Infrastructure/Craftsman.xCoronavirus.Infrastructure.csproj
+++ b/Craftsman.xCoronavirus.Infrastructure/Craftsman.xCoronavirus.Infrastructure.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Craftsman.Mercury.Domain\Craftsman.xCoronavirus.Domain.csproj" />
+    <ProjectReference Include="..\Craftsman.xCoronavirus.Domain\Craftsman.xCoronavirus.Domain.csproj" />
     <ProjectReference Include="..\Framework\Craftsman.Core\Craftsman.Core.csproj" />
   </ItemGroup>
 
